change nav to be fixed and add 120px margin to header, add 10px margin only on .name class for header to make the avatar and name less squashed against edge and closer together

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -7,13 +7,14 @@
   justify-content: center;
   flex-direction: column;
   width: 100%;
-  height: 100%;
+  margin-top: 120px;
 } 
 
 /* generic classes */
 .name {
   color: white;
   font-weight: 300;
+  margin: 10px 0;
 }
 
 .bold {
